--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,14 +3,13 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #313131;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 a {
@@ -47,7 +46,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #313131;
 }
 button:focus,
 button:focus-visible {
@@ -56,13 +55,13 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #313131;
+    background-color: #313131;
   }
   a:hover {
-    color: #747bff;
+    color: #EECE2F;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #313131;
   }
 }
