--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,11 +14,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #313131;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #EECE2F;
 }
 
 body {
